<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/namePromptLayout"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/first_time_playing_welcome"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/title_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/promptTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:paddingStart="10dp"
        android:text="@string/first_time_playing_msg"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/top_level_btn_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
        app:layout_constraintWidth_percent="0.45" />

    <EditText
        android:id="@+id/namePromptEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintWidth_percent="0.40"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_enter_name"
        android:inputType="textPersonName"
        android:paddingStart="37dp"
        android:textSize="@dimen/top_level_btn_font_size"
        android:textColor="@color/colorAccent"
        android:background="@drawable/horizontal_text_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptTextView" />

</android.support.constraint.ConstraintLayout>